--- a/src/_includes/components/site-nav.html
+++ b/src/_includes/components/site-nav.html
@@ -5,8 +5,8 @@
 <input class="mobile-nav-input" id="site-nav-toggle" type="checkbox" style="display: none;" />
 
 <div class="site-nav" aria-label="Global">
-  <div class="site-nav__wrapper wrapper container--x">
-    <div class="site-nav__container container container--y">
+  <div class="site-nav__wrapper wrapper container--horizontal">
+    <div class="site-nav__container container container--vertical">
       <a href="/" class="site-nav__logo">
         <span class="sr-only">{{ site.data.constants-site.title }}</span>
 
