--- a/src/assets/css/page-about.css
+++ b/src/assets/css/page-about.css
@@ -1,49 +1,104 @@
-.page-about .hero {
-  --_background-color: white;
-}
-
-.page-about .values {
-  --_background-color: var(--c-tertiary--light);
-}
-
-.page-about .values .content {
-  display: flex;
-  flex-flow: column wrap;
-  gap: 2rem;
-  justify-content: space-between;
-}
-
-@media screen and (min-width: 768px) {
-  .page-about .values .content {
-    flex-direction: row;
+@layer page {
+  .hero {
+    --_background-color: var(--c-tertiary--light);
   }
 
-  .page-about .value {
-    flex-basis: 50%;
-    max-width: calc(50% - 1rem);
-  }
-}
-
-.page-about .leadership {
-  --_background-color: var(--c-secondary--light);
-}
-
-.page-about .leadership .content {
-  display: flex;
-  flex-flow: column wrap;
-  gap: 2rem;
-  justify-content: space-between;
-}
-
-@media screen and (min-width: 768px) {
-  .page-about .leadership .content {
-    flex-direction: row;
+  .body {
+    --_quote-decoration-color: var(--c-tertiary);
+    --_background-color: white;
   }
 
-  .page-about .leader {
-    flex-basis: 33%;
-    max-width: calc(100% / 3 - 2rem);
+  blockquote {
+    --_quote-font-size: var(--fs-base);
+    --_quote-line-height: 1.5;
+    margin-block: 1rem 2rem;
+  }
+
+  @media screen and (min-width: 1112px) {
+    blockquote {
+      margin-block-end: 3rem;
+      margin-inline: auto;
+    }
+  }
+
+  @media screen and (min-width: 1366px) {
+    blockquote {
+      margin-inline: unset;
+    }
+  }
+
+  .body .container--vertical {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .values {
+    display: flex;
+    flex-flow: column wrap;
+    gap: 2rem;
+    justify-content: space-between;
+  }
+
+  .value {
+    margin-block-end: 1rem;
+    margin-inline: auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    .values {
+      flex-direction: row;
+    }
+
+    .value {
+      flex-basis: 50%;
+      max-width: calc(50% - 1rem);
+    }
+  }
+
+  .leadership {
+    --_background-color: var(--c-secondary--light);
+  }
+
+  .content--leadership {
+    margin-block: 2rem;
+    display: flex;
+    flex-flow: column wrap;
+    gap: 2rem;
+    justify-content: space-between;
+  }
+
+  @media screen and (min-width: 768px) {
+    .content--leadership {
+      flex-direction: row;
+      justify-content: center;
+    }
+
+    .leader {
+      flex-basis: 50%;
+      max-width: calc(100% / 2 - 2rem);
+    }
+
+    .leader:first-of-type {
+      flex-basis: 100%;
+      min-width: 50%;
+      padding-inline: 1rem;
+    }
+  }
+
+  @media screen and (min-width: 1365px) {
+    .leader {
+      flex-basis: 33%;
+      min-width: unset;
+      padding-inline: unset;
+      max-width: calc(100% / 3 - 2rem);
+    }
+
+    .leader:first-of-type {
+      flex-basis: 33%;
+      min-width: unset;
+      padding-inline: unset;
+      max-width: calc(100% / 3 - 2rem);
+    }
   }
 }
-
 
