--- a/src/assets/css/page-home.css
+++ b/src/assets/css/page-home.css
@@ -1,454 +1,471 @@
-body.page-home {
-  --_padding-block-start: 0;
-}
+@layer page {
+  /*
+   * hero
+   */
+  .hero {
+    --_background-color: transparent;
 
-/*
- * hero
- */
-.hero {
-  --_background-color: transparent;
-
-  height: 100dvh;
-  max-height: 1024px;
-  position: relative;
-  overflow: hidden;
-}
-
-.hero__wrapper {
-  min-height: 100%;
-  display: flex;
-  column-gap: 2rem;
-  align-items: center;
-  justify-content: center;
-  z-index: 1;
-  position: relative;
-}
-
-@media screen and (min-width: 1024px) {
-  .hero__wrapper {
-    column-gap: 8rem;
-  }
-}
-
-.hero__header {
-  position: absolute;
-  inset: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  max-width: 65ch;
-  padding-inline: 1rem;
-}
-
-@media screen and (min-width: 768px) {
-  .hero__header {
-    position: inherit;
-  }
-}
-
-.hero__header .header__subheading {
-  font-size: var(--fs-big);
-  line-height: var(--lh-big);
-  letter-spacing: var(--ls-big);
-}
-
-.hero__header .header__content {
-  display: none;
-  margin-block-end: 0.75rem;
-}
-
-@media screen and (min-width: 414px) {
-  .hero__header .header__content {
-    display: block;
-  }
-}
-
-.hero__bg {
-  position: absolute;
-  inset: 0;
-  z-index: -5;
-}
-
-@media (prefers-reduced-motion) {
-  .hero__bg {
-    display: none;
-  }
-}
-
-.hero__bg .bg-wrap {
-  position: absolute;
-  inset: 0;
-}
-
-.hero__bg svg {
-  position: absolute;
-  min-height: 100%;
-  min-width: 100%;
-  inset: 0;
-}
-
-.hero__art {
-  position: absolute;
-  inset: 0;
-  opacity: 0.10;
-  z-index: -1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 2rem;
-  transform: translateY(-3rem);
-}
-
-@media screen and (min-width: 414px) {
-  .hero__art {
-    opacity: 0.20;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero__art {
+    height: 100dvh;
     position: relative;
-    opacity: 1;
-    padding: 0;
+    overflow: hidden;
   }
-}
 
-@media screen and (min-width: 1024px) {
-  .hero__art {
-    max-width: 18rem;
-    transform: translateY(-1rem);
+  .hero .container--vertical {
+    display: flex;
+    column-gap: 2rem;
+    align-items: center;
+    justify-content: center;
   }
-}
 
-.layer-1 {
-  display: block;
-  position: absolute;
-  z-index: -3;
-}
-
-@media (prefers-reduced-motion) {
-  .layer-1 {
-    filter: blur(96px);
+  .hero .container--wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
   }
-}
 
-@media screen and (min-width: 768px) {
-  .layer-1 {
-    transform: inherit;
+  @media screen and (min-width: 1024px) {
+    .hero .container--vertical {
+      column-gap: 8rem;
+    }
   }
-}
 
-.layer-2 {
-  position: absolute;
-  display: none;
-  z-index: -2;
+  .page-home .header {
+    --_header-padding-block-start: 0rem;
+    --_header-padding-block-end: 0rem;
+    position: absolute;
+    inset: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 65ch;
+    padding-inline: 1rem;
+    text-align: center;
+  }
 
-  @media (prefers-reduced-motion) {
-    filter: blur(40px);
+  @media screen and (min-width: 414px) {
+    .page-home .header {
+      text-align: left;
+    }
   }
 
   @media screen and (min-width: 768px) {
-    transform: inherit;
+    .page-home .header {
+      position: inherit;
+    }
   }
-}
 
-.layer-3 {
-  margin-inline: auto;
-  position: relative;
-  mix-blend-mode: overlay;
-  z-index: -1;
-  width: 100%;
-}
+  .hero__header .header__subheading {
+    font-size: 1.25rem;
+    line-height: 1.5;
+    letter-spacing: var(--ls-big);
+  }
 
-@media screen and (min-width: 768px) {
+  .hero__header .header__content {
+    display: none;
+  }
+
+  @media screen and (min-width: 414px) {
+    .hero__header .header__content {
+      display: block;
+    }
+  }
+
+  .hero__bg {
+    position: absolute;
+    inset: 0;
+    z-index: -5;
+  }
+
+  @media (prefers-reduced-motion) {
+    .hero__bg {
+      display: none;
+    }
+  }
+
+  .hero__bg .bg-wrap {
+    position: absolute;
+    inset: 0;
+  }
+
+  .hero__bg svg {
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    inset: 0;
+  }
+
+  .hero__art {
+    position: absolute;
+    inset: 0;
+    opacity: 0.10;
+    z-index: -1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    transform: translateY(-3rem);
+  }
+
+  @media screen and (min-width: 768px) {
+    .hero__art {
+      position: relative;
+      opacity: 1;
+      padding: 0;
+      transform: unset;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    .hero__art {
+      max-width: 18rem;
+    }
+  }
+
+  .layer-1 {
+    display: block;
+    position: absolute;
+    z-index: -3;
+  }
+
+  @media (prefers-reduced-motion) {
+    .layer-1 {
+      filter: blur(96px);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    .layer-1 {
+      transform: inherit;
+    }
+  }
+
+  .layer-2 {
+    position: absolute;
+    display: none;
+    z-index: -2;
+
+    @media (prefers-reduced-motion) {
+      filter: blur(40px);
+    }
+
+    @media screen and (min-width: 768px) {
+      transform: inherit;
+    }
+  }
+
   .layer-3 {
-    transform: inherit;
+    margin-inline: auto;
+    position: relative;
+    mix-blend-mode: overlay;
+    z-index: -1;
+    width: 100%;
   }
-}
 
-.hero__container {
-  margin-block-end: 2rem;
-}
+  @media screen and (min-width: 768px) {
+    .layer-3 {
+      transform: inherit;
+    }
+  }
 
-@media screen and (min-width: 1280px) {
   .hero__container {
-    margin-block-end: -50px;
+    margin-block-end: 2rem;
   }
-}
 
-.hero__blob--one {
-  display: none;
-  position: absolute;
-  inset-inline-start: 50%;
-  inset-inline-end: 0;
-  inset-block-start: 0%;
-  z-index: -10;
+  @media screen and (min-width: 1280px) {
+    .hero__container {
+      margin-block-end: -50px;
+    }
+  }
 
-  margin-inline-start: -96px;
-}
-
-@media (prefers-reduced-motion) {
   .hero__blob--one {
-    display: block;
-    filter: blur(64px);
+    display: none;
+    position: absolute;
+    inset-inline-start: 50%;
+    inset-inline-end: 0;
+    inset-block-start: 0%;
+    z-index: -10;
+
+    margin-inline-start: -96px;
   }
-}
 
-@media screen and (min-width: 1280px) {
-  .hero__blob--one {
-    margin-inline-start: 192px;
+  @media (prefers-reduced-motion) {
+    .hero__blob--one {
+      display: block;
+      filter: blur(64px);
+    }
   }
-}
 
-.hero__blob--one .polygon {
-  aspect-ratio: 801 / 1036;
-  width: 50.0625rem;
-  opacity: 0.3;
-  background: linear-gradient(
-  red,
-  blue
-  );
+  @media screen and (min-width: 1280px) {
+    .hero__blob--one {
+      margin-inline-start: 192px;
+    }
+  }
 
-  clip-path: polygon(
-  63.1% 29.5%,
-  100% 17.1%,
-  76.6% 3%,
-  48.4% 0%,
-  44.6% 4.7%,
-  54.5% 25.3%,
-  59.8% 49%,
-  55.2% 57.8%,
-  44.4% 57.2%,
-  27.8% 47.9%,
-  35.1% 81.5%,
-  0% 97.7%,
-  39.2% 100%,
-  35.2% 81.4%,
-  97.2% 52.8%,
-  63.1% 29.5%
-  );
-}
+  .hero__blob--one .polygon {
+    aspect-ratio: 801 / 1036;
+    width: 50.0625rem;
+    opacity: 0.3;
+    background: linear-gradient(
+    red,
+    blue
+    );
 
-.hero__blob--two {
-  display: none;
-  position: absolute;
-  inset-inline-end: 50%;
-  inset-block-start: 0;
-  z-index: -10;
-  margin-block-start: -128px;
-  margin-inline-start: -96px;
-}
+    clip-path: polygon(
+    63.1% 29.5%,
+    100% 17.1%,
+    76.6% 3%,
+    48.4% 0%,
+    44.6% 4.7%,
+    54.5% 25.3%,
+    59.8% 49%,
+    55.2% 57.8%,
+    44.4% 57.2%,
+    27.8% 47.9%,
+    35.1% 81.5%,
+    0% 97.7%,
+    39.2% 100%,
+    35.2% 81.4%,
+    97.2% 52.8%,
+    63.1% 29.5%
+    );
+  }
 
-@media (prefers-reduced-motion) {
   .hero__blob--two {
-    display: block;
-    filter: blur(64px);
+    display: none;
+    position: absolute;
+    inset-inline-end: 50%;
+    inset-block-start: 0;
+    z-index: -10;
+    margin-block-start: -128px;
+    margin-inline-start: -96px;
   }
-}
 
-@media screen and (min-width: 1024px) {
-  .hero__blob--two {
-    margin-inline-start: 96px;
+  @media (prefers-reduced-motion) {
+    .hero__blob--two {
+      display: block;
+      filter: blur(64px);
+    }
   }
-}
 
-@media screen and (min-width: 1280px) {
-  .hero__blob--two {
-    margin-inline-start: 192px;
+  @media screen and (min-width: 1024px) {
+    .hero__blob--two {
+      margin-inline-start: 96px;
+    }
   }
-}
 
-.hero__blob--two .polygon {
-  aspect-ratio: 801 / 1036;
-  width: 50.0625rem;
-  opacity: 0.3;
-  background: linear-gradient(
-  green,
-  blue
-  );
-  transform: rotate(90deg);
+  @media screen and (min-width: 1280px) {
+    .hero__blob--two {
+      margin-inline-start: 192px;
+    }
+  }
 
-  clip-path: polygon(
-  63.1% 29.5%,
-  100% 17.1%,
-  76.6% 3%,
-  48.4% 0%,
-  44.6% 4.7%,
-  54.5% 25.3%,
-  59.8% 49%,
-  55.2% 57.8%,
-  44.4% 57.2%,
-  27.8% 47.9%,
-  35.1% 81.5%,
-  0% 97.7%,
-  39.2% 100%,
-  35.2% 81.4%,
-  97.2% 52.8%,
-  63.1% 29.5%
-  );
-}
+  .hero__blob--two .polygon {
+    aspect-ratio: 801 / 1036;
+    width: 50.0625rem;
+    opacity: 0.3;
+    background: linear-gradient(
+    green,
+    blue
+    );
+    transform: rotate(90deg);
 
-/*
- * Separator between hero and pl
- */
-.hero + .pl {
-  margin-top: -104px;
-}
+    clip-path: polygon(
+    63.1% 29.5%,
+    100% 17.1%,
+    76.6% 3%,
+    48.4% 0%,
+    44.6% 4.7%,
+    54.5% 25.3%,
+    59.8% 49%,
+    55.2% 57.8%,
+    44.4% 57.2%,
+    27.8% 47.9%,
+    35.1% 81.5%,
+    0% 97.7%,
+    39.2% 100%,
+    35.2% 81.4%,
+    97.2% 52.8%,
+    63.1% 29.5%
+    );
+  }
 
-/*
- * physical literacy
- */
-.pl.container--x {
-  --_background-color: var(--c-primary--lightest);
-}
+  /*
+   * Separator between hero and pl
+   */
+  .hero + .pl {
+    margin-top: -104px;
+  }
 
-.pl .content {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
+  /*
+   * physical literacy
+   */
+  .pl.container--horizontal {
+    --_background-color: var(--c-primary--lightest);
+  }
 
-@media screen and (min-width: 768px) {
+  .pl .container--wrapper {
+    padding-block: 5rem 4rem;
+  }
+
   .pl .content {
-    flex-direction: row;
-    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
   }
-}
 
-.pl .content > * {
-  flex-basis: calc(100% / 2 - 1rem);
-}
-
-.pl .content-card {
-  max-width: 65ch;
-}
-
-.pl .button {
-  --_background--dark: var(--c-butterfly-bush--dark);
-  --_button: var(--c-burnt-sienna);
-  --_button--light: var(--c-burnt-sienna--light);
-  --_button--dark: var(--c-burnt-sienna--dark);
-}
-
-.pl .button:hover {
-  --_button--dark: var(--c-burnt-sienna);
-}
-
-.pl .button:active {
-  --_button--dark: var(--c-burnt-sienna--dark);
-}
-
-/*
- * Location Based Entertainment
- */
-.lbe.container--x {
-  --_background-color: var(--c-secondary--light);
-}
-
-.lbe .content {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-@media screen and (min-width: 768px) {
-  .lbe .content {
-    flex-direction: row;
-    justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    .pl .content {
+      flex-direction: row;
+      justify-content: space-between;
+    }
   }
-}
 
-.lbe .content > * {
-  flex-basis: calc(100% / 2 - 1rem);
-}
-
-.lbe .content-card {
-  max-width: 65ch;
-}
-
-@media  screen and (min-width: 768px) {
-  .lbe .content-card {
-    order: 2;
+  .pl .content > * {
+    flex-basis: calc(100% / 2 - 1rem);
   }
-}
 
-.lbe .button {
-  --_background--dark: var(--c-deep-blush--dark);
-  --_button: var(--c-chambray);
-  --_button--light: var(--c-chambray--light);
-  --_button--dark: var(--c-chambray--dark);
-}
-
-.lbe .button:hover {
-  --_button--dark: var(--c-chambray);
-}
-
-.lbe .button:active {
-  --_button--dark: var(--c-chambray--dark);
-}
-
-
-/*
- * About
- */
-.about.container--x {
-  --_background-color: white;
-}
-
-.about .content {
-  display: flex;
-  flex-direction: column;
-  column-gap: 2rem;
-  row-gap: 2rem;
-  justify-content: flex-end;
-  align-items: flex-end;
-}
-
-@media screen and (min-width: 768px) {
-  .about .content {
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-}
-
-.about .art {
-  flex-shrink: 1;
-  flex-grow: 1;
-}
-
-@media screen and (min-width: 1024px) {
-  .about .art {
-    flex-basis: calc(50% - 1rem);
-    max-width: calc(50% - 1rem);
-  }
-}
-
-.about .art:last-child {
-  max-width: 100%;
-}
-
-.about .content-card {
-  flex-basis: calc(100% / 2 - 2rem);
-}
-
-@media screen and (min-width: 1146px) {
-  .about .content-card {
+  .pl .content-card {
     max-width: 65ch;
   }
-}
 
-.about .button {
-  --_background--dark: var(--c-grey-30);
-  --_button: var(--c-deep-blush);
-  --_button--light: var(--c-deep-blush--light);
-  --_button--dark: var(--c-deep-blush--dark);
-}
+  .pl .button {
+    margin-inline: auto;
+    --_background--dark: var(--c-butterfly-bush--dark);
+    --_button: var(--c-burnt-sienna);
+    --_button--light: var(--c-burnt-sienna--light);
+    --_button--dark: var(--c-burnt-sienna--dark);
+  }
 
-.about .button:hover {
-  --_button--dark: var(--c-deep-blush);
-}
+  .pl .button:hover {
+    --_button--dark: var(--c-burnt-sienna);
+  }
 
-.about .button:active {
-  --_button--dark: var(--c-deep-blush--dark);
+  .pl .button:active {
+    --_button--dark: var(--c-burnt-sienna--dark);
+  }
+
+  /*
+   * Location Based Entertainment
+   */
+  .lbe.container--horizontal {
+    --_background-color: var(--c-secondary--light);
+  }
+
+  .lbe .container--wrapper {
+    padding-block: 5rem 4rem;
+  }
+
+  .lbe .content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  @media screen and (min-width: 768px) {
+    .lbe .content {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+
+  .lbe .content > * {
+    flex-basis: calc(100% / 2 - 1rem);
+  }
+
+  .lbe .content-card {
+    max-width: 65ch;
+  }
+
+  @media  screen and (min-width: 768px) {
+    .lbe .content-card {
+      order: 2;
+    }
+  }
+
+  .lbe .button {
+    margin-inline: auto;
+    --_background--dark: var(--c-deep-blush--dark);
+    --_button: var(--c-chambray);
+    --_button--light: var(--c-chambray--light);
+    --_button--dark: var(--c-chambray--dark);
+  }
+
+  .lbe .button:hover {
+    --_button--dark: var(--c-chambray);
+  }
+
+  .lbe .button:active {
+    --_button--dark: var(--c-chambray--dark);
+  }
+
+
+  /*
+   * About
+   */
+  .about.container--horizontal {
+    --_background-color: white;
+  }
+
+  .about .container--wrapper {
+    padding-block: 5rem 4rem;
+  }
+
+  .about .content {
+    display: flex;
+    flex-direction: column;
+    column-gap: 2rem;
+    row-gap: 2rem;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+
+  @media screen and (min-width: 768px) {
+    .about .content {
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+  }
+
+  .about .art {
+    flex-shrink: 1;
+    flex-grow: 1;
+  }
+
+  @media screen and (min-width: 1024px) {
+    .about .art {
+      flex-basis: calc(50% - 1rem);
+      max-width: calc(50% - 1rem);
+    }
+  }
+
+  .about .art:last-child {
+    max-width: 100%;
+  }
+
+  .about .content-card {
+    flex-basis: calc(100% / 2 - 2rem);
+  }
+
+  @media screen and (min-width: 1146px) {
+    .about .content-card {
+      max-width: 65ch;
+    }
+  }
+
+  .about .button {
+    --_background--dark: var(--c-grey-30);
+    --_button: var(--c-deep-blush);
+    --_button--light: var(--c-deep-blush--light);
+    --_button--dark: var(--c-deep-blush--dark);
+  }
+
+  .about .button:hover {
+    --_button--dark: var(--c-deep-blush);
+  }
+
+  .about .button:active {
+    --_button--dark: var(--c-deep-blush--dark);
+  }
 }
