--- a/src/assets/css/site-footer.css
+++ b/src/assets/css/site-footer.css
@@ -1,40 +1,28 @@
 @layer component {
-  .site-footer.container--x {
-    --_padding-block-start: 5rem;
-
-    padding-block: var(--_padding-block-start, 3rem) var(--_padding-block-end, 2rem);
-  }
-
-  @media screen and (min-width: 768px) {
-    .site-footer.container--x {
-      --_padding-block-start: 5rem;
-      --_padding-block-end: 3rem;
-    }
-  }
-
-  @media screen and (min-width: 1024px) {
-    .site-footer.container--x {
-      --_padding-block-start: 9rem;
-      --_padding-block-end: 4rem;
-    }
+  .site-footer {
+    margin-block: var(--_footer-margin-block, 5rem 3rem);
   }
 
   .site-footer__byline {
     align-items: center;
-    row-gap: 2rem;
+    row-gap: 3rem;
     display: flex;
     flex-direction: column;
   }
 
   .site-footer__nav > div {
     justify-content: space-between;
-    margin-block-start: 4rem;
+    margin-block-start: 3rem;
     gap: 1rem;
     display: flex;
     flex-direction: column;
   }
 
   @media screen and (min-width: 768px) {
+    .site-footer {
+      --_footer-margin-block: 6rem 3rem;
+    }
+
     .site-footer__nav > div {
       margin-block-start: 1rem;
       flex-direction: row;
@@ -48,9 +36,16 @@
     }
   }
 
+  @media screen and (min-width: 1365px) {
+    .site-footer {
+      --_footer-margin-block: 8rem 4rem;
+    }
+  }
+
   .site-footer__byline {
     font-size: 1.5rem;
     font-style: italic;
+    text-align: center;
   }
 
   .site-footer__byline img {
