--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -555,6 +555,10 @@
     margin-block-end: 1rem;
   }
 
+  dt, dd {
+    line-height: 1.5;
+  }
+
   dl.list--title-inline::after {
     content: "";
     visibility: hidden;
