--- a/src/_layouts/default-home.html
+++ b/src/_layouts/default-home.html
@@ -1,3 +1,11 @@
+---
+css:
+  - base.css
+  - site-nav.css
+  - site-footer.css
+  - site-colophon.css
+  - site-copyright.css
+---
 {% assign page_nav = site.data.site-nav-home.items %}
 
 {% include html/doctype.html %}
