--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -1,5 +1,11 @@
 ---
 layout: compress
+css:
+  - base.css
+  - site-nav.css
+  - site-footer.css
+  - site-colophon.css
+  - site-copyright.css
 ---
 {% include html/doctype.html %}
 {% include html/license.html -%}
