refactor: display actual careers email
incase the guests device doesn't support mailto links, let them copy and
paste the email address.

--- a/src/_includes/components/how-to-apply.html
+++ b/src/_includes/components/how-to-apply.html
@@ -18,7 +18,7 @@ Please write a bit about yourself, and don't forget to attach your resume.
 {% capture mailto %}mailto:careers@dancinglightstudios.com?subject={{ job_title }}&body={{ job_body }}{% endcapture %}
 
 <ol>
-	<li>Send us an <a href="{{ mailto }}">email with your resume attached</a>.</li>
+	<li>Send an <a href="{{ mailto }}">email with your resume attached</a> to careers@dancinglightstudios.ca.</li>
 	{% comment %}
 	<li>Click "Apply Now" to use our application form.</li>
 	{% endcomment %}
