--- a/src/assets/css/page-campfire.css
+++ b/src/assets/css/page-campfire.css
@@ -15,11 +15,11 @@
 }
 
 .campfire .container--wrapper {
-  padding-block: 4rem;
+  padding-block: 2rem;
 }
 
 .spark .container--wrapper {
-  padding-block: 4rem;
+  padding-block: 2rem;
 }
 
 /**
@@ -115,17 +115,11 @@
 
   display: flex;
   flex-direction: column;
+  gap: 1rem
 }
 
 .page-spark .post-details {
   color: black;
-}
-
-@media screen and (min-width: 768px) {
-  .page-spark .header {
-    gap: 2rem;
-    flex-flow: row wrap;
-  }
 }
 
 .page-spark .header a {
@@ -133,19 +127,12 @@
   margin-block-end: 1rem;
 }
 
-.page-spark .header div {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  gap: 1rem;
-}
-
-.page-spark .header img {
-  flex: 1
+.page-spark .post {
+  --_vertical-separation: 3rem;
 }
 
 .page-spark blockquote {
-  margin-block: var(--_vertical-separation, 2rem);
+  margin-block: var(--_vertical-separation, 3rem);
 }
 
 .page-spark .post img {
@@ -155,12 +142,12 @@
   border-radius: 1rem;
   box-shadow: 0 1rem 2rem #00000066, 0 0.5rem 1rem #00000022;
   max-width: min(var(--_measure, 65ch), 100%);
-  margin-block: var(--_vertical-separation, 2rem);
+  margin-block-end: var(--_vertical-separation, 3rem);
 }
 
 @media screen and (min-width: 1024px) {
   .page-spark .post {
-    --_vertical-separation: 1rem;
+    --_vertical-separation: 2rem;
     --_measure: 75ch;
     --_horizontal_separation: 0.5rem;
     --_label-color: var(--c-grey-60);
@@ -169,7 +156,7 @@
 
 @media screen and (min-width: 1400px) {
   .page-spark .post {
-    --_vertical-separation: 1rem;
+    --_vertical-separation: 3rem;
     --_measure: 90ch;
     --_horizontal_separation: 0.5rem;
     --_label-color: var(--c-grey-60);
