chore: add campfire menu

--- a/src/_includes/components/site-footer.html
+++ b/src/_includes/components/site-footer.html
@@ -5,7 +5,7 @@
   </div>
 
   <nav class="site-footer__nav nav" id="site-footer-nav">
-    {% include components/nav.html items=site.data.site-nav.items recurse=true %}
+    {% include components/nav.html items=site.data.footer-nav.items recurse=true %}
   </nav>
 {% endcapture %}
 
