chore: update font management with project-hyde fonts

--- a/src/_includes/html/head.html
+++ b/src/_includes/html/head.html
@@ -1,8 +1,8 @@
 <head>
 {% include head/meta.html %}
 {% include head/title.html %}
-{% include components/fonts.html %}
 {% include head/link.html %}
+<link href="{{ "/assets/fonts/fonts.css" }}" rel="stylesheet">
 {% include head/icons.html %}
 {% include head/web-app.html %}
 {% include head/graph.html %}
