--- a/src/assets/css/page-lbe.css
+++ b/src/assets/css/page-lbe.css
@@ -1,5 +1,6 @@
 .page-lbe .hero {
   --_background-color: var(--c-secondary--lightest);
+  --_background-color--dark: var(--c-secondary--dark);
 }
 
 .page-lbe .body {
